--- a/css/main.css
+++ b/css/main.css
@@ -56,19 +56,35 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+body {
+  text-align: center;
+}
+
+.container {
+  margin: 10px auto;
+    width: 50%;
+}
+
 .hchart {
   border-collapse: collapse;
+  margin: 0 auto;
 }
 
 .hchart-cell {
   border: 1px solid #444;
+  font-size: 1.2em;
   text-align: right;
-  padding: 8px;
+  padding: 9px;
 }
 
 .highlight {
   background: yellow;
   font-weight: bold;
+  padding: 8px;
+}
+
+.config {
+  width: 3em;
 }
 
 
